Fix Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,15 @@ body {
     font-family: "Prompt", sans-serif;
     background-color: #0F1624;
     position: relative;
+    width: 100%;
+    overflow-x: hidden;
    
+
 }
-/* 
+
 html {
     scroll-behavior: smooth;
-} */
+}
 
 header {
     height: 100vh;
